# TFG-DigitalTwin

./: .gitignore  CMakeLists.txt  DataPacket.cpp  DataPacket.h  Insole.cpp  Insole.h  LICENSE  Makefile  OrchestratorDMA.cpp  OrchestratorDMA.h  OrchestratorMain.cpp  OrchestratorMain.h  README.md  State.cpp  State.h  StateSignalHandler.cpp  StateSignalHandler.h  ThreadsData.h  config.cpp  config.h  dma.cpp  dma.h  dma_monitor.cpp  dma_monitor.h  main.cpp  node properties.txt  pit.py
data/: data1.csv  data2.csv  datos_buenos.csv  file.csv  marcha.csv  random.csv
gui/: CMakeLists.txt  ManagerGUI.cpp  ManagerGUI.h  assert.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: CSVReader.cpp  CSVReader.h  ClassifierFeatures.cpp  ClassifierFeatures.h  ClassifierModel.cpp  ClassifierModel.h  DMA.cpp  DMA.h  Flash.cpp  Flash.h  RAM.cpp  RAM.h  RTC.cpp  RTC.h  Resource.cpp  Resource.h  SPI.cpp  SPI.h  model.onnx  model_fsr.onnx
threads/: BLE_Stack_Operation.cpp  BLE_Stack_Operation.h  CSVReader.cpp  CSVReader.h  Custom_Event_Handler.cpp  Custom_Event_Handler.h  Energy_Saving.cpp  Energy_Saving.h  FSR_Acquisition.cpp  FSR_Acquisition.h  IMU_Acquisition.cpp  IMU_Acquisition.h  LowLevelActivityClassifier.cpp  LowLevelActivityClassifier.h  RAM_Operation.cpp  RAM_Operation.h
